2003-09-16  Rodrigo Moya <rodrigo@ximian.com>

	* idl/evolution-calendar.idl: added addTimezone method.

	* pcs/cal.c (impl_Cal_addTimezone): implemented new method.
	(cal_class_init): set new method on the epv.

	* pcs/cal-backend.[ch]: added 'add_timezone' virtual method.
	(cal_backend_add_timezone): implemented new virtual method.

	* pcs/cal-backend-file.c (cal_backend_file_modify_object): it's
	cal_component_get_as_string, not cal_component_as_string.

	* cal-client/cal-client.c (cal_client_ensure_timezone_on_server):
	dont use anymore updateObjects method, use addTimezone instead.

2003-09-15  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/cal-backend-file.c (cal_backend_file_create_object): return
	the UID of the added object.
	(cal_backend_file_remove_object): ditto for old_object.

2003-09-15    <jpr@ximian.com>

	* conduits/todo/todo-conduit.c (replace_record): switch to modify
	object
	(add_record): switch to using create object

	* conduits/calendar/calendar-conduit.c (process_multi_day): switch
	to using create object
	(add_record): switch to using create object
	(replace_record): switch to modify object

	* cal-client/cal-listener.h: add signals

	* cal-client/cal-listener.c (impl_notifyObjectsReceived):
	implement listener method
	(build_object_list): ditto
	(cal_listener_class_init): create receive_objects and send_objects
	signals

	* cal-client/cal-client.h: add, update protos

	* cal-client/cal-client.c (cal_objects_received_cb):
	receive_objects callback
	(cal_objects_sent_cb): send_objects callback
	(cal_client_init): listen for above signals
	(cal_client_create_object): pass back uid
	(cal_client_receive_objects): implement
	(cal_client_send_objects): ditto

	* idl/evolution-calendar.idl: add receive/send objects methods and
	yank updateObjects

	* pcs/cal.h: add protos

	* pcs/cal.c (impl_Cal_receiveObjects): implement
	(impl_Cal_sendObjects): ditto
	(cal_class_init): add epv methods
	(cal_notify_objects_received): notify of objects received call,