@@ -101,6 +101,7 @@ static void cal_backend_file_set_mode (CalBackend *backend, CalMode mode);
 static char *cal_backend_file_get_default_object (CalBackend *backend, CalObjType type);
 static CalComponent *cal_backend_file_get_object_component (CalBackend *backend, const char *uid, const char *rid);
 static char *cal_backend_file_get_timezone_object (CalBackend *backend, const char *tzid);
+static gboolean cal_backend_file_add_timezone (CalBackend *backend, const char *tzobj);
 static GList *cal_backend_file_get_free_busy (CalBackend *backend, GList *users, time_t start, time_t end);
 static GNOME_Evolution_Calendar_CalObjChangeSeq *cal_backend_file_get_changes (
 	CalBackend *backend, CalObjType type, const char *change_id);
@@ -198,6 +199,7 @@ cal_backend_file_class_init (CalBackendFileClass *class)
  	backend_class->get_default_object = cal_backend_file_get_default_object;
 	backend_class->get_object_component = cal_backend_file_get_object_component;
 	backend_class->get_timezone_object = cal_backend_file_get_timezone_object;
+	backend_class->add_timezone = cal_backend_file_add_timezone;
 	backend_class->get_free_busy = cal_backend_file_get_free_busy;
 	backend_class->get_changes = cal_backend_file_get_changes;
 	backend_class->get_alarms_in_range = cal_backend_file_get_alarms_in_range;
@@ -996,6 +998,33 @@ cal_backend_file_get_timezone_object (CalBackend *backend, const char *tzid)
 		return g_strdup (ical_string);
 	else
 		return NULL;
+}
+
+/* Add_timezone handler for the file backend */
+static gboolean
+cal_backend_file_add_timezone (CalBackend *backend, const char *tzobj)
+{
+	icalcomponent *tz_comp;
+	CalBackendFile *cbfile;
+	CalBackendFilePrivate *priv;
+
+	cbfile = (CalBackendFile *) backend;
+
+	g_return_val_if_fail (IS_CAL_BACKEND_FILE (cbfile), FALSE);
+	g_return_val_if_fail (tzobj != NULL, FALSE);
+
+	priv = cbfile->priv;
+
+	tz_comp = icalparser_parse_string (tzobj);
+	if (!tz_comp)
+		return FALSE;
+
+	if (icalcomponent_isa (tz_comp) == ICAL_VTIMEZONE_COMPONENT) {
+		icalcomponent_add_component (priv->icalcomp, tz_comp);
+		mark_dirty (cbfile);
+	}
+
+	return FALSE;
 }
 
 typedef struct {
